--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body{
     background-color: var(--Pale-blue);
     background-position: cover;
     min-height: 100vh;
-    font-size: clamp(2rem 3rem + 1vw 6rem);
+    font-size: clamp(1.5rem, 2.5vw, 4rem);
 }
 .main{
     display: flex;
@@ -53,7 +53,7 @@ body{
 }
 .card-text p{
     opacity: .8;
-    font-size: 1.5vw;
+    font-size: 1.3rem;
     margin-bottom: 2rem;
 }
 .container{
@@ -74,7 +74,8 @@ body{
     margin-top: 1.4rem;
 }
 .small-title h4{
-    font-weight: 900;
+    font-weight: 600;
+    font-size: 1.3rem;
     color: var(--Dark-blue);
 }
 .small-title p{
@@ -88,21 +89,21 @@ body{
     outline: none;
     border: 1px solid var(--Pale-blue);
     border-radius: 1vw;
-    font-size: 1.5vw;
+    font-size: min(1.4rem 3rem);
     color: var(--Pale-blue);
     font-weight: 600;
     cursor: pointer;
 }
 .btn p{
     opacity: .8;
-    font-size: clamp(1rem 3rem  + 1vw 6rem);
+    font-size: clamp(1rem, 1vw, 4rem);
     font-weight: 700;
     padding-bottom: 3rem;
 
 }
 a{
     text-decoration: none;
-    font-size: clamp(1.3vw 3vw + 1rem 6rem);
+    font-size: min(1.5vw, 3rem);
     font-weight: 700;
     border-bottom: 1px solid hsl(224, 81%, 47%);
     color: hsl(224, 81%, 47%);
@@ -111,32 +112,40 @@ a{
     text-align: center;
     color: var(--Dark-blue);
     font-weight: 900;
-    font-size: clamp(1rem 3rem  + 1vw 6rem);
+    font-size: clamp(1rem, 1vw, 3rem);
 }
 
 @media screen and (max-width: 450px) {
     .body{
-        font-size: clamp(2rem, 3vw, 4rem);
+        font-size: min(2rem, 4rem);
+        line-height: 1.3;
         text-align: center;
         background: url('images/pattern-background-mobile.svg') no-repeat;
         background-color: var(--Pale-blue);
         background-position: cover;
     }
     .main{
-        max-width: min-content;
+        max-width: max-content;
         gap: 1rem;
-        flex-shrink: calc(22vw - 2rem);
-        padding: 0 35vw;
-        margin: 0;
+        flex-shrink: 1.2;
+        padding: 0 3vw;
+        margin: 0 auto;
         justify-content: center;
 
     }
     p{
-        font-size: clamp(2rem, 3vw, 5rem);
+        font-weight: 400;
+        opacity: 1;
+        text-align: center;
+
     }
     .container{
         margin: 0 auto;
-        min-width: auto;
+        min-width: 30%;
+    }
+    a{
+        font-size: min(2.5vw, 5rem);
+
     }
 
 }
